--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "startd": "DEBUG=* nodemon ./bin/www"
+    "start": "DEBUG=* node ./bin/www",
+    "startw": "DEBUG=* & nodemon ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
-    "debug": "~2.2.0",
+    "debug": "^2.2.0",
     "ejs": "~2.3.3",
     "express": "~4.13.1",
     "morgan": "~1.6.1",
