--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
-  "name": "LoL-Slack",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "start": "DEBUG=* node ./bin/www",
-    "startw": "DEBUG=* & nodemon ./bin/www"
-  },
-  "dependencies": {
-    "body-parser": "~1.13.2",
-    "cookie-parser": "~1.3.5",
-    "debug": "^2.2.0",
-    "ejs": "~2.3.3",
-    "express": "~4.13.1",
-    "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
-  }
+    "name": "LoL-Slack",
+    "version": "0.0.0",
+    "private": true,
+    "scripts": {
+        "start": "DEBUG=* node ./bin/www",
+        "startw": "DEBUG=* & nodemon ./bin/www"
+    },
+    "dependencies": {
+        "body-parser": "~1.13.2",
+        "cookie-parser": "~1.3.5",
+        "debug": "^2.2.0",
+        "ejs": "~2.3.3",
+        "express": "~4.13.1",
+        "morgan": "~1.6.1",
+        "serve-favicon": "~2.3.0"
+    },
+    "engines": {
+        "node": "~4.2"
+    }
 }
