--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
-    "name": "LoL-Slack",
-    "version": "0.0.0",
-    "private": true,
-    "scripts": {
-        "start": "node ./bin/www",
-        "startn": "DEBUG=* nodemon ./bin/www",
-        "startnw": "DEBUG=* & nodemon ./bin/www"
-    },
-    "dependencies": {
-        "body-parser": "~1.13.2",
-        "cookie-parser": "~1.3.5",
-        "debug": "^2.2.0",
-        "ejs": "~2.3.3",
-        "express": "~4.13.1",
-        "morgan": "~1.6.1",
-        "serve-favicon": "~2.3.0"
-    },
-    "engines": {
-        "node": "~4.2"
-    }
+  "name": "LoL-Slack",
+  "version": "0.0.0",
+  "private": true,
+  "scripts": {
+    "start": "node ./bin/www",
+    "startn": "DEBUG=* nodemon ./bin/www",
+    "startnw": "DEBUG=* & nodemon ./bin/www"
+  },
+  "dependencies": {
+    "body-parser": "~1.13.2",
+    "cookie-parser": "~1.3.5",
+    "debug": "^2.2.0",
+    "ejs": "~2.3.3",
+    "express": "~4.13.1",
+    "morgan": "~1.6.1",
+    "node-slack": "0.0.7",
+    "serve-favicon": "~2.3.0"
+  },
+  "engines": {
+    "node": "~4.2"
+  }
 }
