--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "debug": "^2.2.0",
     "ejs": "~2.3.3",
     "express": "~4.13.1",
+    "lol-riot-api-module": "^1.0.1",
     "morgan": "~1.6.1",
     "node-slack": "0.0.7",
     "serve-favicon": "~2.3.0"
